# ldap-otp-gateway

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
example/: README.md  certs.sh  docker-compose.yml  otp.Dockerfile  otp.py  seed.ldif
example/webadm/: license.example.key  servers.xml
src/ldap_otp_gateway/: __init__.py  config.py  otp_gateway.py  run.py
src/ldap_otp_gateway/gateway_filter/: base_gateway_filter.py  ignore_static_user_list.py
src/ldap_otp_gateway/otp_backend/: base_otp_backend.py  dummy_static.py  rcdevs_soap.py
src/ldap_otp_gateway/otp_extractor/: base_otp_extractor.py
src/ldap_otp_proxy/: __init__.py  config.py  otp_proxy.py  run.py
src/ldap_otp_proxy/otp/: base_otp.py  dummy_static.py  rcdevs_soap.py  soap_rcdevs.py
src/ldap_otp_proxy/otp_extractor/: suffix.py
tests/unit/: .gitignore  test_otp_gateway.py  test_otp_proxy.py
tests/unit/gateway_filter/: test_ignore_static_user_list.py
tests/unit/otp_backend/: rcdevs_soap.py
