[tool.poetry]
name = "ldap-otp-gateway"
version = "0.1.0"
description = ""
authors = ["raphaeljoie <9681129+raphaeljoie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyotp = "^2.9.0"
psycopg = "^3.2.3"
ldaptor = "^21.2.0"
twisted = "^24.10.0"
requests = "^2.32.3"

[tool.poetry.scripts]
ldap-otp-gateway = 'ldap_otp_gateway.run:run'

[tool.poetry.group.peer]
optional = true

[tool.poetry.group.peer.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
